fixed title for home block on mobile devices

--- a/sass/base/_main-styles.scss
+++ b/sass/base/_main-styles.scss
@@ -1932,7 +1932,7 @@ input:last-of-type {
 
 .home.blog-wrapper {
 	width   : 100%;
-	height  : 447px;
+	height  : 526px;
 	position: relative;
 }
 
@@ -1953,15 +1953,18 @@ input:last-of-type {
 }
 
 .home_content {
+	display          : flex;
+	justify-content  : center;
+	align-items      : center;
+	width            : 80%;
 	position         : absolute;
 	left             : 50%;
-	bottom           : 109px;
-	-webkit-transform: translateX(-50%);
-	-moz-transform   : translateX(-50%);
-	-ms-transform    : translateX(-50%);
-	-o-transform     : translateX(-50%);
-	transform        : translateX(-50%);
-	background       : var(--primary-color);
+	top              : 60%;
+	-webkit-transform: translate(-50%, -60%);
+	-moz-transform   : translate(-50%, -60%);
+	-ms-transform    : translate(-50%, -60%);
+	-o-transform     : translate(-50%, -60%);
+	transform        : translate(-50%, -60%);
 	padding-top      : 24px;
 	padding-bottom   : 18px;
 	padding-left     : 39px;
@@ -1972,8 +1975,10 @@ input:last-of-type {
 	font-size  : 72px;
 	font-weight: 400;
 	color      : var(--third-color);
-	line-height: 0.5;
-	white-space: nowrap;
+	background : var(--primary-color);
+	text-align : center;
+	width      : fit-content;
+	padding    : 12px 16px;
 }
 
 /*********************************
