--- a/sass/base/_responsive.scss
+++ b/sass/base/_responsive.scss
@@ -131,6 +131,10 @@
 	.main_nav_item {
 		margin-right: 33px;
 	}
+
+	.home_content h1 {
+		font-size: 56px;
+	}
 }
 
 /************
@@ -434,7 +438,6 @@
 		padding-bottom: 11px;
 		padding-left  : 22px;
 		padding-right : 24px;
-		bottom        : 50%;
 	}
 
 	.home_content h1 {
